[package]
name = "ndata"
version = "0.3.1"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A self-owned data structure with an internal heap and garbage collection."
homepage = "https://github.com/mraiser/ndata"
documentation = "https://docs.rs/ndata/latest/ndata/"
repository = "https://github.com/mraiser/ndata"

[features]
serde_support = ["serde_json"]
no_std_support = ["hashbrown"]
debug_mutex = ["backtrace"]
mirror = []

[dependencies]
serde_json = { version = "1.0.83", optional = true }
hashbrown = { version = "0.12.3", optional = true }
backtrace = { version = "0.3.66", optional = true }

[lib]
name = "ndata"
path = "src/ndata.rs"

