[package]
name = "ndata"
version = "0.3.9"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Thread-safe, self-owned JSON-like data with manual garbage collection."
homepage = "https://github.com/mraiser/ndata"
documentation = "https://docs.rs/ndata/latest/ndata/"
repository = "https://github.com/mraiser/ndata"

[features]
serde_support = ["serde_json"]

[dependencies]
serde_json = { version = "1.0.111", optional = true }

[lib]
name = "ndata"
path = "src/ndata.rs"

